# bsd-fetch

./: .gitignore  Makefile.in  README.md  VERSION  autogen.sh  common.c  configure.ac  fetch.c  fetch.h  file.c  ftp.c  http.c  main.c
fetch/: fetch.c  patches.diff
inc/nbcompat/: netdb.h  stdio.h
libfetch/: common.h  fetch.pc.in  ftp.c  http.c
